--- a/MazeGame/MazeGame/MazeGame.vcxproj
+++ b/MazeGame/MazeGame/MazeGame.vcxproj
@@ -127,16 +127,28 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\Game.h" />
-    <ClInclude Include="..\Level.h" />
-    <ClInclude Include="..\Player.h" />
-    <ClInclude Include="..\Point.h" />
+    <ClInclude Include="Door.h" />
+    <ClInclude Include="Enemy.h" />
+    <ClInclude Include="Game.h" />
+    <ClInclude Include="Goal.h" />
+    <ClInclude Include="Key.h" />
+    <ClInclude Include="Level.h" />
+    <ClInclude Include="Money.h" />
+    <ClInclude Include="PlacableActor.h" />
+    <ClInclude Include="Player.h" />
+    <ClInclude Include="Point.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\Game.cpp" />
-    <ClCompile Include="..\Level.cpp" />
-    <ClCompile Include="..\main.cpp" />
-    <ClCompile Include="..\Player.cpp" />
+    <ClCompile Include="Door.cpp" />
+    <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="Game.cpp" />
+    <ClCompile Include="Goal.cpp" />
+    <ClCompile Include="Key.cpp" />
+    <ClCompile Include="Level.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="PlacableActor.cpp" />
+    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Money.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
