--- a/MazeGame/MazeGame/MazeGame.vcxproj
+++ b/MazeGame/MazeGame/MazeGame.vcxproj
@@ -137,14 +137,19 @@
     <ClInclude Include="GameState.h" />
     <ClInclude Include="GameStateMachine.h" />
     <ClInclude Include="Goal.h" />
+    <ClInclude Include="HighScoreState.h" />
     <ClInclude Include="Key.h" />
     <ClInclude Include="Level.h" />
+    <ClInclude Include="LoseState.h" />
     <ClInclude Include="MainMenuState.h" />
     <ClInclude Include="Money.h" />
     <ClInclude Include="PlacableActor.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Point.h" />
+    <ClInclude Include="SettingsState.h" />
     <ClInclude Include="StateMachineExampleGame.h" />
+    <ClInclude Include="Utility.h" />
+    <ClInclude Include="WinState.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AudioManager.cpp" />
@@ -153,14 +158,18 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameplayState.cpp" />
     <ClCompile Include="Goal.cpp" />
+    <ClCompile Include="HighScoreState.cpp" />
     <ClCompile Include="Key.cpp" />
     <ClCompile Include="Level.cpp" />
+    <ClCompile Include="LoseState.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainMenuState.cpp" />
     <ClCompile Include="PlacableActor.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Money.cpp" />
+    <ClCompile Include="SettingsState.cpp" />
     <ClCompile Include="StateMachineExampleGame.cpp" />
+    <ClCompile Include="WinState.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
